/*
Copyright 2019 The KubeCarrier Authors.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";
package kubecarrier.api.v1;
option go_package = "v1";

import "google/api/annotations.proto";

import "meta.proto";

message Service {
  ObjectMeta metadata = 1;
  string spec = 2;
}

message ServiceList {
  ListMeta metadata = 1;
  repeated Service items = 2;
}

message ServiceGetRequest {
  string service = 1;
  string version = 2;
  string name = 3;
  string account = 4;
}

message ServiceListRequest {
  string service = 1;
  string version = 2;
  string account = 3;
  string labelSelector = 4;
  int64 limit = 5;
  string continue = 6;
}

service Services {
  rpc List(ServiceListRequest) returns (ServiceList) {
    option (google.api.http) = {
      get : "/v1/accounts/{account}/services/{service}/{version}"
    };
  };
  rpc Get(ServiceGetRequest) returns (Service) {
    option (google.api.http) = {
      get : "/v1/accounts/{account}/services/{service}/{version}/{name}"
    };
  };
}
